--- a/.env_template
+++ b/.env_template
@@ -1,1 +1,10 @@
 OPENAI_API_KEY = your-api-key
+OPENAI_LLM_MODEL = gpt-4o-mini
+
+ANTHROPIC_API_KEY = your-api-key
+ANTHROPIC_LLM_MODEL = claude-3-5-sonnet-20240620
+
+LANGCHAIN_TRACING_V2 = false
+LANGCHAIN_ENDPOINT = https://api.smith.langchain.com
+LANGCHAIN_API_KEY = your-api-key
+LANGCHAIN_PROJECT = your-project-id
