chore: Update requirements.txt with FastAPI, uvicorn, and pytubefix
feat: Create app.py for FastAPI application

feat: Add audio_download.py for downloading YouTube audio

feat: Rename main.py to speech_2_summarize.py

feat: Add Whisper and media folders to gitignore

This commit updates the .gitignore file to exclude the speech_2_text/models and speech_2_text/media folders from version control. It also adds placeholder files (put_model_here.txt and put_media_here.txt) to ensure the folders are included in the repository. This helps to prevent unnecessary files from being committed and allows users to easily add their own models and media files.

chore: Update readme.md with ffmpeg installation instructions

This commit updates the readme.md file with instructions for installing ffmpeg. It provides a download link for the ffmpeg binaries and specifies that the ffmpeg folder should be placed in the speech_2_text directory. It also includes a directory structure example to illustrate the expected folder hierarchy.

--- a/.gitignore
+++ b/.gitignore
@@ -152,10 +152,11 @@ coverage/
 **/build/
 
 # whisper models
-speech_2_text/models/
+speech_2_text/models/*
+!speech_2_text/models/put_model_here.txt
 
-# Cache
-*.cache
-cache.*
+# media floder
+speech_2_text/media/*
+!speech_2_text/media/put_media_here.txt
 
 
