Add Dockerfile and refactor project structure with Celery and Redis.
- Implemented asynchronous workers using Celery.
- Added task status tracking, including "on_progress" state for real-time progress updates.
- Updated requirements.txt with new dependencies.

--- a/.gitignore
+++ b/.gitignore
@@ -152,11 +152,12 @@ coverage/
 **/build/
 
 # whisper models
-speech_2_text/models/*
-!speech_2_text/models/put_model_here.txt
+project/speech_2_text/models/*
+!project/speech_2_text/models/put_model_here.txt
 
 # media floder
-speech_2_text/media/*
-!speech_2_text/media/put_media_here.txt
+project/speech_2_text/media/*
+!project/speech_2_text/media/put_media_here.txt
+project/uploaded_files/*
 
 
