--- a/project/.env_template
+++ b/project/.env_template
@@ -8,3 +8,7 @@ LANGCHAIN_TRACING_V2 = false
 LANGCHAIN_ENDPOINT = https://api.smith.langchain.com
 LANGCHAIN_API_KEY = your-api-key
 LANGCHAIN_PROJECT = your-project-id
+
+FFMPEG_PATH=./speech_2_text/ffmpeg/bin
+WHISPER_MODEL_PATH=./speech_2_text/models
+MEDIA_PATH=./uploaded_files
