--- a/.gitignore
+++ b/.gitignore
@@ -151,26 +151,11 @@ coverage/
 .gradle
 **/build/
 
-# model files
-*.pth
-*.h5
-*.ckpt
-*.pb
-*.onnx
-*.tflite
-*.mlmodel
-*.caffemodel
-*.weights
-*.bin
-*.pkl
-*.joblib
-*.model
-*.pt
-*.hdf5
+# model
+project/speech_2_text/models/*
 
 
 # media
-!static/*
 *.mp3
 *.wav
 *.ogg
